# oven-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  README.md  ROADMAP.md  SECURITY.md  deny.toml  justfile  recipe.toml  rustfmt.toml
.claude/agents/: implementer.md  merger.md  reviewer.md
.claude/skills/cook/: SKILL.md
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
action/: README.md  action.yml  package-lock.json  package.json
action/__tests__/: install.test.ts  run.test.ts
action/src/: index.ts  install.ts  run.ts
proptest-regressions/agents/: mod.txt
src/: errors.rs  lib.rs  logging.rs  main.rs
src/agents/: fixer.rs  implementer.rs  merger.rs  mod.rs  planner.rs  reviewer.rs
src/cli/: clean.rs  look.rs  mod.rs  off.rs  on.rs  prep.rs  report.rs  ticket.rs
src/config/: mod.rs
src/db/: agent_runs.rs  graph.rs  mod.rs  runs.rs
src/git/: mod.rs
src/github/: issues.rs  labels.rs  mod.rs  prs.rs
src/issues/: github.rs  local.rs  mod.rs
src/pipeline/: executor.rs  graph.rs  mod.rs  runner.rs  state.rs
src/process/: mod.rs  stream.rs
templates/: fixer.txt  implementer.txt  merger.txt  planner.txt  reviewer.txt
templates/skills/: cook.md  refine.md
tests/: cli_tests.rs  db_tests.rs  pipeline_tests.rs
tests/common/: mod.rs
